[project]
name = "mcp-reddit-server"
version = "1.0.0"
description = "A comprehensive Reddit MCP server with REST API, topic aggregation, and Azure deployment"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Aanerud" },
]
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.7.0",
    "praw>=7.8.1",
    "redditwarp>=1.3.0",
    "fastmcp>=0.1.0",
    "uvicorn",
    "fastapi>=0.104.0",
]


[project.scripts]
mcp-reddit = "mcp_reddit.reddit_fetcher:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_reddit"] 
